# kevi

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  format.md  fuzzing.md  tui.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_header_parse.rs  fuzz_target_ron_codec.rs
scripts/: lint_inline.sh  release.sh
src/: lib.rs  main.rs
src/cli/: clap_models.rs  cli.rs  mod.rs  runner.rs
src/config/: app_config.rs  config.rs
src/core/: adapters.rs  clipboard.rs  crypto.rs  dk_session.rs  entry.rs  fs_secure.rs  generator.rs  memlock.rs  mod.rs  ports.rs  secret_string.rs  secret_string_option.rs  service.rs  session.rs  store.rs  vault.rs  wordlist.rs
src/cryptography/: generator.rs  mod.rs  types.rs
src/filesystem/: clipboard.rs  mod.rs  secure.rs  store.rs
src/session_management/: mod.rs  resolver.rs  session.rs
src/tui/: app.rs  mod.rs  theme.rs
src/vault/: codec.rs  (+6 more)
tests/: add_generate_tests.rs  async_smoke_tests.rs  backup_tests.rs  clipboard_env_tests.rs  clipboard_tests.rs  config_generator_tests.rs  config_tests.rs  crypto_failure_tests.rs  crypto_tests.rs  dk_session_debug_tests.rs  get_flags_tests.rs  get_once_tests.rs  header_cmd_tests.rs  init_tests.rs  list_query_json_tests.rs  list_tests.rs  memlock.rs  plaintext_reject_tests.rs  profile_cli_tests.rs  secret_handling_tests.rs  service_tests.rs  session_tests.rs  show_tests.rs  store_tests.rs  tui_tests.rs  tui_v15_tests.rs  unlock_tests.rs  vault_tests.rs  version_tests.rs
(+5 files in other folders)
